# DriftWatch

./: .dockerignore  .env.example  .gitignore  ARCH.md  DECISIONS.md  README.md  RUNBOOK.md  docker-compose.yml  mypy.ini  ruff.toml
.github/workflows/: ci.yml
agent/: Dockerfile  pyproject.toml
agent/alembic/: env.py
agent/alembic/versions/: 20260504_1200_0001_initial_agent_schema.py
agent/app/: config.py  deps.py  main.py
agent/app/api/: hil.py  investigations.py  queue.py  webhooks.py
agent/app/checkpoints/: postgres.py
agent/app/core/: logging.py
agent/app/db/: base.py  models.py  session.py
agent/app/graph/: builder.py  llm.py  nodes.py  state.py  supervisor.py
agent/app/prompts/: action_system.md  action_user.md  comms_system.md  comms_user.md  loader.py  triage_system.md  triage_user.md
agent/app/services/: arq_pool.py  dlq_repo.py  graph_runner.py  investigations.py  platform_client.py  registry_check.py
agent/app/testing/: fakes.py
agent/app/webhooks/: verify.py
agent/tests/: conftest.py  test_action_enqueue.py  test_health.py  test_hil.py  test_queue_endpoint.py  test_routing.py  test_snapshots.py  test_webhooks.py
agent/tests/snapshots/: green_to_red_retrain.json  no_action_minor_drift.json  rollback_with_hil_approve.json  rollback_with_hil_reject.json
contracts/: pyproject.toml  v1.py
dashboard/: Dockerfile  app.py  config.py  pyproject.toml
dashboard/lib/: api.py  panels.py
infra/postgres/: init.sql
notebooks/: 01_eda_training_mlflow.ipynb
platform/: Dockerfile  alembic.ini  pyproject.toml
platform/alembic/: env.py
platform/alembic/versions/: 20260506_0001_initial_platform_schema.py
platform/app/: __init__.py  config.py  deps.py  main.py
platform/app/api/: __init__.py  health.py  predict.py
platform/app/api/routes/: __init__.py  drift.py  predict.py  promote.py  registry.py
platform/app/core/: __init__.py  logging.py
platform/app/db/: __init__.py  base.py  init_db.py  models.py  session.py
platform/app/ml/: __init__.py  artifacts.py  data.py  eda.py  evaluate.py  mlflow_utils.py  preprocessing.py  registry.py  schema.py  threshold.py  train.py  tune.py
platform/app/models/: __init__.py  drift.py  errors.py  prediction.py  registry.py
platform/app/services/: __init__.py  drift_service.py  prediction_service.py  promotion_service.py  registry_service.py  webhook_service.py
platform/artifacts/model_v1/: card.md  metrics.json  model.pkl  run_metadata.json  schema.json  threshold.json
platform/tests/: __init__.py  test_artifacts.py  test_data_cleaning.py  test_drift_service.py  test_health.py  test_predict_schema.py  test_predict_schema_endpoint.py  test_prediction_service.py  test_promotion_gate.py  test_registry_service.py  test_schema.py  test_threshold.py
scripts/: pyproject.toml  send_traffic.py
worker/: Dockerfile  config.py  main.py  pyproject.toml
worker/db/: __init__.py  base.py  models.py  session.py
worker/services/: __init__.py  investigations_writer.py  platform_promote.py
worker/tests/: conftest.py  test_dlq.py  test_idempotency.py  test_replay.py  test_retrain.py  test_retries.py  test_rollback.py
worker/tools/: __init__.py  replay.py  retrain.py  rollback.py
