[project]
name = "driftwatch-contracts"
version = "0.1.0"
description = "DriftWatch versioned Pydantic v2 schemas shared between platform and agent."
requires-python = ">=3.11,<3.12"
dependencies = [
    "pydantic>=2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["contracts"]
