[project]
name = "driftwatch-contracts"
version = "0.1.0"
description = "DriftWatch versioned Pydantic v2 schemas shared between platform and agent."
requires-python = ">=3.11,<3.12"
dependencies = [
    "pydantic>=2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# project root IS the contracts package (flat layout: __init__.py + v1.py at top level).
# force-include ships those two files into a `contracts/` package on install.
[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "contracts/__init__.py"
"v1.py" = "contracts/v1.py"
