[project]
name = "driftwatch-dashboard"
version = "0.1.0"
description = "DriftWatch Streamlit dashboard. Phase 0 placeholder; real views land in Phase 5."
requires-python = ">=3.11,<3.12"
dependencies = [
    "streamlit>=1.34",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
