[project]
name = "driftwatch-dashboard"
version = "0.1.0"
description = "DriftWatch Streamlit dashboard — registry, investigations, queue/DLQ, HIL inbox (Phase 5)."
requires-python = ">=3.11,<3.12"
dependencies = [
    "streamlit>=1.34",
    "streamlit-autorefresh>=1.0",
    "httpx>=0.27",
    "pydantic-settings>=2.1",
    "pandas>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# dashboard ships flat modules (app.py, config.py, lib/) — tell hatchling to include them as-is
[tool.hatch.build.targets.wheel]
bypass-selection = true