[project]
name = "driftwatch-platform"
version = "0.1.0"
description = "DriftWatch platform service."
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "httpx>=0.27",
    "structlog>=24.1",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "mlflow>=2.12",
    "joblib>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "driftwatch-contracts",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.uv.sources]
driftwatch-contracts = { path = "../contracts", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
