[project]
name = "driftwatch-scripts"
version = "0.1.0"
description = "DriftWatch demo helper scripts (traffic generator, etc.)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.0",
]

# Scripts dir is not a package — we just run files directly with `uv run`.
[tool.hatch.build.targets.wheel]
bypass-selection = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"