[project]
name = "driftwatch-worker"
version = "0.1.0"
description = "DriftWatch arq worker — slow tools (replay, retrain, rollback). Phase 0 stub."
requires-python = ">=3.11,<3.12"
dependencies = [
    "arq>=0.26",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "httpx>=0.27",
    "structlog>=24.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# worker ships a flat main.py, not a package directory — tell hatchling to include it as-is
[tool.hatch.build.targets.wheel]
bypass-selection = true
