[project]
name = "driftwatch-worker"
version = "0.1.0"
description = "DriftWatch arq worker — slow tools (replay, retrain, rollback)."
requires-python = ">=3.11,<3.12"
dependencies = [
    "arq>=0.26",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "httpx>=0.27",
    "structlog>=24.1",
    "mlflow==2.16.2",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    # respx complements httpx.MockTransport for tool unit tests
    "respx>=0.21",
    # in-memory async SQLite for unit tests of investigations_writer
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# worker ships a flat main.py + sibling packages — tell hatchling to include them as-is
[tool.hatch.build.targets.wheel]
bypass-selection = true